--- a/public/rust/vm_math/Cargo.toml
+++ b/public/rust/vm_math/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-flatbuffers = "0.8.4"
+vm_buffers = { git = "https://github.com/tech-paws/vm_buffers.git" }
